--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,10 +18,18 @@ jobs:
 
     steps:
     - name: Setup repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+
+    - name: Cache NuGet packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.nuget/packages
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-nuget-
       
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+    - name: Install .NET
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
         
@@ -29,7 +37,7 @@ jobs:
       run: dotnet restore ./src/Functional.sln
       
     - name: Build
-      run: dotnet build ./src/Functional.sln --no-restore
+      run: dotnet build ./src/Functional.sln --no-restore --configuration Release
       
     - name: Test
-      run: dotnet test ./src/Functional.sln --no-build --verbosity normal
+      run: dotnet test ./src/Functional.sln --no-build --configuration Release --verbosity normal
