Added some unit tests and code coverage

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,20 @@
                 "${workspaceFolder}/src/Functional${file}.sln"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
+        {
+            "label": "test",
+            "command": "dotnet",
+            "group": { "kind": "test", "isDefault": true },
+            "args": [
+              "test",
+              "${workspaceFolder}/test/Functional.Tests/Functional.Tests.csproj",
+              "/p:CollectCoverage=true",
+              "/p:CoverletOutputFormat=lcov",
+              "/p:CoverletOutput=./lcov.info"
+            ],
+            "type": "process",
+            "problemMatcher": "$msCompile"
+          }
     ]
 }
