--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ Generated\ Files/
 TestResult.xml
 nunit-*.xml
 
+# Code coverage
+lcov.info
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
