--- a/src/Functional/Functional.csproj
+++ b/src/Functional/Functional.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Functional</PackageId>
+    <Version>2024.10.2</Version>
+    <Authors>Juan Diego Martínez</Authors>
+    <PackageDescription>C# types for functional development</PackageDescription>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/jdmartinez/Functional</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jdmartinez/Functional</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
