--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -20,13 +20,13 @@ jobs:
         dotnet-version: '8.x'
 
     - name: Restore dependencies
-      run: dotnet restore
-
+      run: dotnet restore ./src/Functional.sln
+      
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build ./src/Functional.sln --no-restore --configuration Release
 
     - name: Pack NuGet package
-      run: dotnet pack --configuration Release --no-build --output ./nupkg
+      run: dotnet pack ./src/Functional.sln --configuration Release --no-build --output ./nupkg
 
     - name: Push to NuGet
       run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
