--- a/src/Functional/Functional.csproj
+++ b/src/Functional/Functional.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>Functional</PackageId>
+    <PackageId>Functional.CSharp.Types</PackageId>
     <Version>2024.10.2</Version>
     <Authors>Juan Diego Martínez</Authors>
     <PackageDescription>C# types for functional development</PackageDescription>
