--- a/src/Functional/Functional.csproj
+++ b/src/Functional/Functional.csproj
@@ -13,4 +13,8 @@
     <RepositoryUrl>https://github.com/jdmartinez/Functional</RepositoryUrl>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+  </ItemGroup>
+
 </Project>
