--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet pack ./src/Functional.sln --configuration Release --no-build --output ./nupkg
 
     - name: Push to NuGet
-      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
