--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,9 +1,8 @@
 name: Publish to NuGet
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [ published ]
   workflow_dispatch:
 
 jobs:
@@ -26,7 +25,7 @@ jobs:
       run: dotnet build ./src/Functional.sln --no-restore --configuration Release
 
     - name: Pack NuGet package
-      run: dotnet pack ./src/Functional.sln --configuration Release --no-build --output ./nupkg
+      run: dotnet pack ./src/Functional.sln --configuration Release --no-build --output ./nupkg /p:PackageVersion=${{ github.event.release.tag_name }}
 
     - name: Push to NuGet
       run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
