--- a/src/Functional/Functional.csproj
+++ b/src/Functional/Functional.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>Functional.CSharp.Types</PackageId>
-    <PackageDescription>C# types for functional development</PackageDescription>
+    <PackageId>Funcional.Types</PackageId>
+    <PackageDescription>Functional types for .NET: Option, Result, Unit, Validator, Error</PackageDescription>
   </PropertyGroup>
 
 </Project>
