--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -16,9 +16,15 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Validate tag format (YYYY.MM.0 expected)
-      if: startsWith(github.event.release.tag_name, format('{0}.{1}.', format('{0,number,0000}', fromJson('{"y":0}').y), format('{0,number,00}', fromJson('{"m":0}').m))) == false
-      run: echo "Saltando validación personalizada (placeholder)" # (Opcional: se puede reemplazar por validación estricta)
+    - name: Validate tag format (YYYY.MM.PATCH expected)
+      run: |
+        TAG="${{ github.event.release.tag_name }}"
+        echo "Validating tag format: $TAG"
+        # Accept tags like 2025.11.0 or 2025.1.2 (year. month. patch)
+        if [[ ! $TAG =~ ^[0-9]{4}\.[0-9]{1,2}\.[0-9]+$ ]]; then
+          echo "Invalid tag format: $TAG. Expected format: YYYY.MM.PATCH (e.g. 2025.11.0)"
+          exit 1
+        fi
 
     - name: Setup .NET 10
       uses: actions/setup-dotnet@v4
