--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,13 +8,16 @@
     <Authors>Juan Diego Martínez</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/jdmartinez/Functional</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile>$(MSBuildThisFileDirectory)README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/jdmartinez/Functional</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="\"/>
+    <None Include="$(MSBuildThisFileDirectory)README.md">
+      <Pack>true</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <!-- GitVersion Integration -->
