--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -131,6 +131,31 @@ jobs:
     - name: Push to NuGet
       run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
 
+    - name: Verify package versions
+      run: |
+        set -euo pipefail
+        echo "Verifying nupkg versions against PACKAGE_VERSION=$PACKAGE_VERSION"
+        files=(./nupkg/*.nupkg)
+        if [ ${#files[@]} -eq 0 ]; then
+          echo "No packages found in ./nupkg"; exit 1
+        fi
+        for f in "${files[@]}"; do
+          echo "Inspecting $f"
+          nuspec=$(unzip -p "$f" "*.nuspec" 2>/dev/null || true)
+          if [ -z "$nuspec" ]; then
+            echo "No .nuspec found inside $f"; exit 1
+          fi
+          ver=$(echo "$nuspec" | grep -oPm1 "(?<=<version>)[^<]+") || true
+          if [ -z "$ver" ]; then
+            echo "Could not find <version> in nuspec for $f"; exit 1
+          fi
+          echo "Found version $ver in $f"
+          if [ "$ver" != "$PACKAGE_VERSION" ]; then
+            echo "Version mismatch in $f: expected $PACKAGE_VERSION but found $ver"; exit 1
+          fi
+        done
+        echo "All packages in ./nupkg have version $PACKAGE_VERSION"
+
     - name: Attach Packages to Release
       uses: softprops/action-gh-release@v1
       if: github.event_name == 'release'
